Fri Jun 18 09:48:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Connection_Handler.cpp:
        * tao/IIOP_Acceptor.cpp:
        * tao/IIOP_Connection_Handler.cpp:
          Improved output of debug messages.

        * tao/IIOP_Endpoint.cpp (set):
          In case we don't use dotted decimal addresses and the get_host_name()
          calls fails, log a message at level 5 that the get_host_name() has
          failed. This can be due to a misconfigured dns server and this
          call could take a long time then causing the app to not respond to
          other requests. This way the user can detect this a little bit easier
          from the log. In case the get_host_name() and get_host_addr()
          both fail we log an error instead of a debug message because we
          return -1 in that case and don't set the host_ member.

Fri Jun 18 09:13:12 2004  UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/ETCL_FilterFactory.h:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.h:
          Don't mix virtual and non-virtual bases. This fixes warnings
          from the HP aCC compiler.

Thu Jun 17 13:53:38 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/y.tab.cpp:

          Fixed IDL compiler crash caused by illegal valuetype
          member declaration.

Thu Jun 17 12:51:40 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/tao_idl.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:
        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/util/utl_err.cpp:
        * TAO_IDL/util/utl_global.cpp:

          Removed all support for reading from standard input (for
          example 'tao_idl < foo.idl'). Reasons for this change are:

          - The IDL compiler has no filename on which to base the
            names of the generated files. Even if we make up a