@@ -139,7 +139,6 @@ DRV_init (void)
   idl_global->set_local_escapes (local_escapes);
   idl_global->set_be ("");
   idl_global->set_compile_flags (0);
-  idl_global->set_read_from_stdin (I_FALSE);
   idl_global->set_include_file_names (0);
   idl_global->set_n_include_file_names (0);
   idl_global->set_parse_state (IDL_GlobalData::PS_NoState);
